Fix to Conjunction, more on first tutorial, added unit testing framework, added additional css styles, made tutorial height consistent.

--- a/ProoferLogicEngine/nbproject/project.properties
+++ b/ProoferLogicEngine/nbproject/project.properties
@@ -1,7 +1,14 @@
+browser.autorefresh.SL__Browsers_ChromeBrowser=true
+browser.highlightselection.SL__Browsers_ChromeBrowser=true
 config.folder=
+external.project.url=
 file.reference.ProoferLogicEngine-config=config
 file.reference.ProoferLogicEngine-public_html=public_html
 file.reference.ProoferLogicEngine-test=test
+file.reference.ProoferLogicEngine-tests=tests
 files.encoding=UTF-8
+server=INTERNAL
 site.root.folder=${file.reference.ProoferLogicEngine-public_html}
-test.folder=
+start.file=proofer.html
+test.folder=${file.reference.ProoferLogicEngine-tests}
+web.context.root=/ProoferLogicEngine
