Begin transition from fixed layout to fluid layout to support varying screen resolutions

--- a/ProoferLogicEngine/public_html/manifest.json
+++ b/ProoferLogicEngine/public_html/manifest.json
@@ -10,7 +10,8 @@
         }
     },
     "permissions": [
-        "storage"
+        "storage",
+	"fullscreen"
     ],
     "icons": {
         "16": "img/proofer-ico-16.png",
