Additional changes to get node-webkit to work. Commented out saved data functionality. Might make extension vs app configurable but for now just uncomment/comment to switch between the 2.

--- a/ProoferLogicEngine/public_html/package.json
+++ b/ProoferLogicEngine/public_html/package.json
@@ -3,7 +3,8 @@
     "window": {
         "width": 1026,
         "height": 768,
-        "toolbar": false
+        "toolbar": true,
+        "icon": "img/proofer-ico-16.png"
     },
     "main": "proofer.html"
 }
