Switched to hardcoded linux environment. Platform independence once I get this working at least once. Also removed the old unit tests reference from project.properties.

--- a/ProoferLogicEngine/nbproject/project.properties
+++ b/ProoferLogicEngine/nbproject/project.properties
@@ -9,5 +9,5 @@ files.encoding=UTF-8
 server=INTERNAL
 site.root.folder=${file.reference.ProoferLogicEngine-public_html}
 start.file=proofer.html
-test.folder=${file.reference.ProoferLogicEngine-tests}
+test.folder=
 web.context.root=/ProoferLogicEngine
