--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
-    "name": "conf",
+    "name": "Proofer",
+    "description": "A game of logical thinking",
+    "version": "2.0.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/rkenney525/ProoferLogicEngine.git"
+    },
+    "license": "ISC",
     "window": {
         "width": 1280,
         "height": 720,
         "toolbar": true,
         "icon": "img/proofer-ico-16.png"
     },
-    "main": "proofer.html"
+    "main": "proofer.html",
+    "devDependencies": {
+        "grunt": "^0.4.5",
+        "grunt-contrib-requirejs": "^0.4.4"
+    }
 }
