--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "toolbar": true,
     "icon": "img/proofer-ico-16.png"
   },
-  "main": "proofer.html",
+  "main": "build/stage/proofer.html",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-nw-builder": "^2.0.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-nw-builder": "^2.0.0"
+    "grunt-preprocess": "^5.0.1"
   }
 }
